--- a/Source/Panama/Resources/Dictionary/ToolBar.xaml
+++ b/Source/Panama/Resources/Dictionary/ToolBar.xaml
@@ -24,6 +24,10 @@
                 <Setter Property="Height" Value="16"/>
                 <Setter Property="Margin" Value="6,0"/>
             </Style>
+            <Style TargetType="TextBlock" BasedOn="{StaticResource TextBlockMessage}">
+                <Setter Property="VerticalAlignment" Value="Center"/>
+                <Setter Property="Margin" Value="4,0"/>
+            </Style>
         </Style.Resources>
     </Style>
     
