--- a/Source/Panama/Resources/Dictionary/Images.xaml
+++ b/Source/Panama/Resources/Dictionary/Images.xaml
@@ -33,6 +33,8 @@
     <BitmapImage x:Key="ImageDotRed" UriSource="/Panama;component/Resources/Images/Image.Dot.Red.32.png"/>
     <BitmapImage x:Key="ImageExclamation" UriSource="/Panama;component/Resources/Images/Image.Exclamation.64.png"/>
     <BitmapImage x:Key="ImageExit" UriSource="/Panama;component/Resources/Images/Image.Exit.64.png"/>
+    <BitmapImage x:Key="ImageFlagBlue" UriSource="/Panama;component/Resources/Images/Image.Flag.Blue.64.png"/>
+    <BitmapImage x:Key="ImageFlagRed" UriSource="/Panama;component/Resources/Images/Image.Flag.Red.64.png"/>
     
     <BitmapImage x:Key="ImageFileType0" UriSource="/Panama;component/Resources/Images/Image.FileType.Unknown.48.png"/>
     <!-- Type 1 is Word (.doc / .docx) -->
@@ -65,6 +67,7 @@
     <BitmapImage x:Key="ImagePublisher" UriSource="/Panama;component/Resources/Images/Image.Publisher.64.png"/>
     <BitmapImage x:Key="ImageReference" UriSource="/Panama;component/Resources/Images/Image.Reference.48.png"/>
     <BitmapImage x:Key="ImageRefresh" UriSource="/Panama;component/Resources/Images/Image.Refresh.48.png"/>
+    <BitmapImage x:Key="ImageRemove" UriSource="/Panama;component/Resources/Images/Image.Remove.64.png"/>
     <BitmapImage x:Key="ImageSave" UriSource="/Panama;component/Resources/Images/Image.Save.64.png"/>
     <BitmapImage x:Key="ImageSearch" UriSource="/Panama;component/Resources/Images/Image.Search.64.png"/>
     <BitmapImage x:Key="ImageStatistics" UriSource="/Panama;component/Resources/Images/Image.Statistics.64.png"/>
@@ -115,7 +118,10 @@
     <Image x:Key="ImageDatabaseMenu" Source="{StaticResource ImageDatabase}" Style="{StaticResource MenuItemImage}"/>
     <Image x:Key="ImageDeleteMenu" x:Shared="False"  Source="{StaticResource ImageDelete}" Style="{StaticResource MenuItemImage}"/>
     <Image x:Key="ImageDotGreenMenu" x:Shared="False"  Source="{StaticResource ImageDotGreen}" Style="{StaticResource MenuItemImage}"/>
+    <Image x:Key="ImageExclamationMenu" x:Shared="False"  Source="{StaticResource ImageExclamation}" Style="{StaticResource MenuItemImage}"/>
     <Image x:Key="ImageFilterMenu" Source="{StaticResource ImageFilter}" Style="{StaticResource MenuItemImage}"/>
+    <Image x:Key="ImageFlagBlueMenu" x:Shared="False"  Source="{StaticResource ImageFlagBlue}" Style="{StaticResource MenuItemImage}"/>
+    <Image x:Key="ImageFlagRedMenu" x:Shared="False"  Source="{StaticResource ImageFlagRed}" Style="{StaticResource MenuItemImage}"/>
     <Image x:Key="ImageInformationMenu" Source="{StaticResource ImageInformation}" Style="{StaticResource MenuItemImage}"/>
     <Image x:Key="ImageLinkMenu" Source="{StaticResource ImageExit}" Style="{StaticResource MenuItemImage}"/>
     <Image x:Key="ImageNoteMenu" x:Shared="False" Source="{StaticResource ImageNote}" Style="{StaticResource MenuItemImage}"/>
