--- a/Source/Panama/Resources/Dictionary/TextBlock.xaml
+++ b/Source/Panama/Resources/Dictionary/TextBlock.xaml
@@ -1,6 +1,7 @@
 ﻿<ResourceDictionary 
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:con="clr-namespace:Restless.App.Panama.Controls">
 
     <Style TargetType="TextBlock" x:Key="TextBlockError" BasedOn="{StaticResource {x:Type TextBlock}}">
         <Setter Property="FontSize" Value="11.5"/>
@@ -77,6 +78,13 @@
                 </BeginStoryboard>
             </EventTrigger>
         </Style.Triggers>
+    </Style>
+
+    <Style TargetType="con:LinkedTextBlock">
+        <Setter Property="FontSize" Value="11"/>
+        <Setter Property="Foreground" Value="#FF808080" />
+        <Setter Property="TextWrapping" Value="NoWrap"/>
+        <Setter Property="Margin" Value="0"/>
     </Style>
     
 </ResourceDictionary>
