--- a/Source/Panama/View/EditControls/LinkEdit.xaml
+++ b/Source/Panama/View/EditControls/LinkEdit.xaml
@@ -2,21 +2,24 @@
     x:Class="Restless.App.Panama.View.LinkEdit"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:con="clr-namespace:Restless.App.Panama.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
     mc:Ignorable="d" 
-    d:DesignHeight="229" d:DesignWidth="350">
-    <Border>
-        <StackPanel>
-            <Label>Link Name</Label>
-            <TextBox Text="{Binding SelectedRow[name]}" />
+    d:DesignHeight="186" d:DesignWidth="310">
+    <StackPanel>
+        <Label>Link Name</Label>
+        <TextBox Text="{Binding SelectedRow[name]}" />
+        <StackPanel Orientation="Horizontal">
             <Label>Url</Label>
-            <TextBox Text="{Binding SelectedRow[url]}" />
-            <Label>Note</Label>
-            <TextBox Text="{Binding SelectedRow[notes], TargetNullValue=''}" />
-            <Label>
-                <Hyperlink Command="{Binding OpenRowCommand}">Go to url</Hyperlink>
-            </Label>
+            <con:LinkedTextBlock
+                Margin="6,6,0,0"
+                Text="Browse"
+                Command="{Binding OpenRowCommand}"/>
         </StackPanel>
-    </Border>
+
+        <TextBox Text="{Binding SelectedRow[url]}" />
+        <Label>Note</Label>
+        <TextBox Text="{Binding SelectedRow[notes], TargetNullValue=''}" />
+    </StackPanel>
 </UserControl>
