--- a/Source/Panama/Controls/KeyValueDisplay/KeyValueDisplay.xaml
+++ b/Source/Panama/Controls/KeyValueDisplay/KeyValueDisplay.xaml
@@ -6,14 +6,22 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     mc:Ignorable="d" 
     Name="UC"
-    d:DesignHeight="48" d:DesignWidth="300">
-    <StackPanel Orientation="Horizontal">
-        <Label 
+    d:DesignHeight="148" d:DesignWidth="300">
+    <DockPanel>
+        <Label
+            DockPanel.Dock="Left"
             Foreground="{Binding HeaderForeground,ElementName=UC}"
             Width="{Binding HeaderWidth,ElementName=UC}"
             FontSize="{Binding HeaderFontSize,ElementName=UC}"
             Content="{Binding Header,ElementName=UC}"
-            VerticalAlignment="Center"/>
-        <TextBlock Text="{Binding Value,ElementName=UC}" FontSize="11" VerticalAlignment="Center"/>
-    </StackPanel>
+            VerticalAlignment="{Binding HeaderVerticalAlignment,ElementName=UC}"/>
+
+        <TextBlock
+            DockPanel.Dock="Left"
+            Foreground="{Binding ValueForeground,ElementName=UC}"
+            Text="{Binding Value,ElementName=UC}"
+            FontSize="{Binding ValueFontSize,ElementName=UC}"
+            TextWrapping="Wrap"
+            VerticalAlignment="{Binding ValueVerticalAlignment,ElementName=UC}" />
+    </DockPanel>
 </UserControl>
