--- a/Source/Panama/View/EditControls/PublisherEditAddPeriod.xaml
+++ b/Source/Panama/View/EditControls/PublisherEditAddPeriod.xaml
@@ -21,8 +21,8 @@
         </Grid.RowDefinitions>
         <Label Grid.Column="0" Grid.Row="0" VerticalAlignment="Bottom">Period Start</Label>
         <Label Grid.Column="2" Grid.Row="0" VerticalAlignment="Bottom">Period End</Label>
-        <con:CalendarExtended Grid.Column="0" Grid.Row="1" SelectedDate="{Binding Periods.AddStart}" DisplayDate="{Binding Periods.AddStart, Mode=OneTime}"/>
-        <con:CalendarExtended Grid.Column="2" Grid.Row="1" SelectedDate="{Binding Periods.AddEnd}" DisplayDate="{Binding Periods.AddEnd, Mode=OneTime}"/>
+        <con:CalendarExtended Grid.Column="0" Grid.Row="1" SelectedDateUtc="{Binding Periods.AddStart}" IsUtcMode="False" />
+        <con:CalendarExtended Grid.Column="2" Grid.Row="1" SelectedDateUtc="{Binding Periods.AddEnd}"  IsUtcMode="False"/>
         <ToolBarTray Grid.Column="0" Grid.Row="2" Grid.ColumnSpan="2">
             <ToolBar Style="{StaticResource ToolBarCommandHolder}">
                 <Button Command="{Binding Commands[PeriodAddConfirm]}" Content="Add period" ToolTip="Add the specified submission period"/>
