Major update to use packages instead of including the tools libraries in the solutuion.

--- a/Source/Panama/View/ToolMessageSyncView.xaml
+++ b/Source/Panama/View/ToolMessageSyncView.xaml
@@ -5,7 +5,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:r="clr-namespace:Restless.App.Panama.Resources"
-    xmlns:cv="clr-namespace:Restless.Tools.Converters;assembly=Restless.Tools.Library"
+    xmlns:cv="clr-namespace:Restless.Tools.Converters;assembly=Restless.Tools.Utility"
     mc:Ignorable="d"
     d:DesignWidth="860" d:DesignHeight="400">
     <Grid>
